samples/_failures_safe/1761601572_63141b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9af9f662.c: In function ‘main’:
./samples/SAFE/__tmp_9af9f662.c:151:5: error: expected expression at end of input
  151 |     matrix_init(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_9af9f662.c:151:5: error: too few arguments to function ‘matrix_init’
./samples/SAFE/__tmp_9af9f662.c:46:6: note: declared here
   46 | void matrix_init(Matrix* mat, int rows, int cols) {
      |      ^~~~~~~~~~~
./samples/SAFE/__tmp_9af9f662.c:151:5: error: expected declaration or statement at end of input
  151 |     matrix_init(&
      |     ^~~~~~~~~~~
